--- a/app/src/main/res/layout/routine_view.xml
+++ b/app/src/main/res/layout/routine_view.xml
@@ -27,7 +27,7 @@
                 tools:srcCompat="@mipmap/routine_round" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/ac_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="24dp"
@@ -48,7 +48,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.089"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/ac_temp"
                 app:layout_constraintVertical_bias="0.136" />
 
             <ImageButton
