--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#72E1C7</color>
+    <color name="colorPrimaryLight">#87FFE3</color>
+    <color name="colorText">#3C3F58</color>
+    <color name="colorPrimaryDark">#3B4063</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
