el color tmb pq me olvide

--- a/app/src/main/res/layout/door_view.xml
+++ b/app/src/main/res/layout/door_view.xml
@@ -51,8 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:text="a"
-                    android:textColor="#3C3F58"
+                    android:textColor="@color/colorText"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/onStateDoor"
                     app:layout_constraintStart_toEndOf="@+id/imageView"
