--- a/app/src/main/res/layout/lamp_view.xml
+++ b/app/src/main/res/layout/lamp_view.xml
@@ -80,8 +80,7 @@
                 android:id="@+id/expandableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                >
+                ><!--android:visibility="gone"-->
 
                 <LinearLayout
                     android:layout_width="match_parent"
