--- a/app/src/main/res/layout/faucet_view.xml
+++ b/app/src/main/res/layout/faucet_view.xml
@@ -92,6 +92,7 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/expandableLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
