--- a/app/src/main/res/layout/door_view.xml
+++ b/app/src/main/res/layout/door_view.xml
@@ -41,7 +41,7 @@
 
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/oven_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Casa | Living"
@@ -59,7 +59,7 @@
                         android:textSize="22sp"
                         app:layout_constraintBottom_toTopOf="@+id/onStateDoor"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
-                        app:layout_constraintTop_toBottomOf="@+id/textView" />
+                        app:layout_constraintTop_toBottomOf="@+id/oven_location" />
 
                     <TextView
                         android:id="@+id/onStateDoor"
