--- a/app/src/main/res/layout/ac_view.xml
+++ b/app/src/main/res/layout/ac_view.xml
@@ -45,7 +45,7 @@
 
 
                     <TextView
-                        android:id="@+id/ac_location"
+                        android:id="@+id/faucet_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
