--- a/app/src/main/res/layout/blinds_layout.xml
+++ b/app/src/main/res/layout/blinds_layout.xml
@@ -45,7 +45,7 @@
 
 
                     <TextView
-                        android:id="@+id/ac_location"
+                        android:id="@+id/faucet_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
@@ -116,10 +116,10 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/open"/>
+                            app:layout_constraintEnd_toStartOf="@+id/faucet_open"/>
 
                         <com.google.android.material.button.MaterialButton
-                            android:id="@+id/open"
+                            android:id="@+id/faucet_open"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/colorPrimary"
@@ -151,7 +151,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <SeekBar
-                            android:id="@+id/seekBar"
+                            android:id="@+id/faucet_seekBar"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
@@ -167,10 +167,10 @@
                             android:layout_height="wrap_content"
                             android:text="80 (%)"
                             android:textSize="18sp"
-                            app:layout_constraintBottom_toBottomOf="@+id/seekBar"
+                            app:layout_constraintBottom_toBottomOf="@+id/faucet_seekBar"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/seekBar"
-                            app:layout_constraintTop_toTopOf="@+id/seekBar" />
+                            app:layout_constraintStart_toEndOf="@+id/faucet_seekBar"
+                            app:layout_constraintTop_toTopOf="@+id/faucet_seekBar" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
